<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentB">

    <TextView
        style="@style/current_fragment_text_view"
        android:text="@string/fragment_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/btnCtoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_fragment_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnCtoD"
        app:layout_constraintEnd_toStartOf="@+id/btnCtoD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCtoD" />

    <Button
        android:id="@+id/btnCtoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_fragment_d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCtoA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMsg_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCtoA"
        tools:text="@string/hello_fragment_c" />
</androidx.constraintlayout.widget.ConstraintLayout>