<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentB">
    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        style="@style/current_fragment_text_view"
        android:text="@string/fragment_b"/>

    <Button
        android:id="@+id/btnBtoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_fragment_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnBtoC"
        app:layout_constraintEnd_toStartOf="@+id/btnBtoC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBtoC" />

    <Button
        android:id="@+id/btnBtoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_fragment_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBtoA"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>